--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "nuxt-on-lambda",
   "version": "1.0.0",
   "main": "index.js",
-  "repository": "https://github.com/mya-ake/nuxt-on-lambda.git",
-  "author": "t.shibuta <make.app.ts@gmail.com>",
+  "repository": "https://github.com/ky0615/kanto-bus-bustok.git",
+  "author": "KotaroYabe <idolm@ster.pw>",
   "license": "MIT",
   "scripts": {
     "dev": "nuxt",
@@ -20,8 +20,12 @@
   },
   "dependencies": {
     "aws-serverless-express": "^3.2.0",
+    "bulma": "^0.7.1",
+    "bulmaswatch": "^0.6.2",
     "express": "^4.16.3",
-    "nuxt": "^1.4.0"
+    "node-sass": "^4.9.0",
+    "nuxt": "^1.4.0",
+    "sass-loader": "^7.0.1"
   },
   "devDependencies": {
     "babel-eslint": "^8.2.3",
