--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "sls:deploy": "sls deploy",
     "deploy": "cross-env ENDPOINT_ENV=cf run-s build sls:deploy",
     "deploy:api_gw": "cross-env ENDPOINT_ENV=api_gw run-s build sls:deploy",
+    "deploy:gh": "push-dir --dir=dist --branch=gh-pages --cleanup",
     "delete": "sls remove"
   },
   "dependencies": {
@@ -39,6 +40,7 @@
     "eslint-plugin-standard": "^3.1.0",
     "eslint-plugin-vue": "^4.5.0",
     "npm-run-all": "^4.1.3",
+    "push-dir": "^0.4.1",
     "serverless": "^1.27.2"
   }
 }
