--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "delete": "sls remove"
   },
   "dependencies": {
+    "@nuxtjs/google-analytics": "^2.0.2",
     "aws-serverless-express": "^3.2.0",
     "bulma": "^0.7.1",
     "bulmaswatch": "^0.6.2",
